--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <head>
         <script src="https://cdn.staticfile.net/jquery/3.7.1/jquery.min.js"></script>
         <meta charset="utf-8">
-        <title></title>
+        <title>rag-awesome-list</title>
     </head>
     <body class="bod2">
-        <p style="font-size:30px; color:green;"><b>test-title</b></p>
-    
+        <ul>
+            <div>
+            <a href="https://arxiv.org/abs/2212.10509"><b>Interleaving Retrieval with Chain-of-Thought Reasoning for Knowledge-Intensive Multi-Step Questions</b></a>
+            <br>
+            <b>author</b>: Harsh Trivedi, Niranjan Balasubramanian, Tushar Khot, Ashish Sabharwal
+            <br>
+            </div>
+        </ul>
     </body>
 </html>
