--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>rag-awesome-list</title>
     </head>
     <body class="bod2">
-        <div style="text-align:left; font-size:30px; ">
+        <div style="text-align:center; font-size:30px; ">
             <b>An awesome-list of RAG</b>
         </div>
         <ul>
